# Fiovana

./: .env.backup  .env.development  .env.example  .env.production  .gitignore  .prettierignore  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT.md  OLLAMA_SETUP.md  README.md  SECURITY_ANALYSIS_REPORT.md  deny.toml  eslint.config.js  index.html  monitor_sync.sh  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
.cargo/: config.toml
.claude/: CLAUDE.md
.github/scripts/: generate-checksums.sh
.github/workflows/: ci.yml  release.yml  security.yml
docs/: BACKUP_PROCEDURES.md  DEPLOYMENT.md  EMERGENCY_PROCEDURES.md  INCIDENT_RESPONSE.md  SECURITY.md  toolbar-bugfix.md  toolbar-collapse-feature.md  toolbar-collapse-visual-guide.md  toolbar-redesign.md
log/folder/: rust-mcp-server.log.2025-09-11  rust-mcp-server.log.2025-09-12  rust-mcp-server.log.2025-09-13
src/: App.tsx  main-react.tsx  main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  audit.toml  debug_artifact_test.rs  debug_compilation_issue.sh  debug_hash.rs  debug_test.rs  deny.toml  hnsw_test.rs  prevent_test_loops.sh  run_tests_safely.sh  rustfmt.toml  tauri.conf.json  tauri.conf.schema.json  tauri.linux.conf.json  test_regex.rs
src-tauri/.proxemic/index/: index.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  commands.rs  lib.rs  main.rs  memory_monitor.rs  notifications.rs  resource_monitor.rs
src-tauri/src/ai/: actions.rs  anthropic.rs  context.rs  conversation_context.rs  document_commands.rs  intent.rs  mod.rs  nl_operations.rs  ollama.rs  openrouter.rs  prompts.rs  response.rs  text_operations.rs
src-tauri/src/app_config/: encryption.rs  errors.rs  mod.rs  proxemic.dev.json  proxemic.prod.json  types.rs
src-tauri/src/assets/: default_styles.css
src-tauri/src/collaboration/: mod.rs  operational_transforms.rs  presence.rs  room_manager.rs  websocket_server.rs
src-tauri/src/commands/: ai_commands.rs  collaboration_commands.rs  content_adaptation_commands.rs  content_classification_commands.rs  conversation_context_commands.rs  conversational_intelligence_commands.rs  deduplication_commands.rs  document_chunking_commands.rs  document_commands.rs  document_comparison_commands.rs  document_editing_commands.rs  document_generation_commands.rs  document_indexing_commands.rs  embedding_commands.rs  embedding_settings_commands.rs  format_conversion_commands.rs  health_commands.rs  knowledge_analyzer_commands.rs  lifecycle_manager_commands.rs  main_commands.rs  mod.rs  nl_operations_commands.rs  progress_commands.rs  relationship_commands.rs  smart_organizer_commands.rs  structure_commands.rs  style_commands.rs  style_learning_commands.rs  style_transfer_commands.rs  template_commands.rs  text_operation_commands.rs  vector_commands.rs  workspace_ai_commands.rs  workspace_analyzer_commands.rs  workspace_backup_commands.rs  workspace_commands.rs  workspace_intelligence_commands.rs  workspace_performance_commands.rs
src-tauri/src/config/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/document/: batch_processor.rs  chunker.rs  content_adapter.rs  content_classifier.rs  content_hasher.rs  deduplication.rs  document_comparison.rs  document_generator.rs  docx_parser.rs  file_processor.rs  format_converters.rs  import_errors.rs  indexer.rs  metadata_extractor.rs  mod.rs  output_generator.rs  pdf_parser.rs  progress_persistence.rs  progress_tracker.rs  relationship_analyzer.rs  structure_analyzer.rs  style_analyzer.rs  style_learner.rs  style_transfer.rs  templates.rs
src-tauri/src/filesystem/: errors.rs  event_persistence.rs  event_processor.rs  health_monitor.rs  mod.rs  operations.rs  watcher.rs
src-tauri/src/filesystem/security/: audit_logger.rs  backup_manager.rs  circuit_breaker.rs  config.rs  config_validator.rs  deployment_checker.rs  emergency_procedures.rs  env_validator.rs  fallback_validator.rs  json_schema_validator.rs  log_rotation.rs  magic_number_validator.rs  mod.rs  path_validator.rs  permissions.rs  permissions_escalation.rs  safe_mode.rs  scope.rs  scope_restrictions.rs  scope_validator.rs  security_config.rs  startup_validator.rs
src-tauri/src/services/: document_indexing.rs  mod.rs
src-tauri/src/vector/: embedding_service.rs  mod.rs  models.rs  persistent_store.rs
src-tauri/src/workspace/: backup.rs  config.rs  intelligence.rs  knowledge_analyzer.rs  lifecycle_manager.rs  manager.rs  mod.rs  performance.rs  smart_organizer.rs  types.rs  workspace_analyzer.rs
src-tauri/templates/: documentation_readme.md  research_readme.md
src-tauri/tests/: audit_logger_tests.rs  backup_integration_test.rs  conflict_detection_tests.rs  cross_platform_compatibility_tests.rs  error_recovery_tests.rs  event_persistence_tests.rs  file_watcher_tests.rs  health_monitoring_integration_tests.rs  integration_error_recovery_tests.rs  integration_test.rs  integration_tests.rs  json_schema_validation.rs  monitoring_tests.rs  notification_tests.rs  performance_benchmarks.rs  security_integration.rs  test.env  workspace_edge_case_tests.rs  workspace_integration_tests.rs  workspace_performance_benchmarks.rs  workspace_security_tests.rs  workspace_unit_tests.rs
src/api/: client.ts  commandRegistry.ts  errorHandler.ts  eventBus.ts  index.ts  typeGuards.ts
src/collaboration/: YjsProvider.tsx  index.ts  useYjsCollaboration.ts
src/components/: DeduplicationDemo.tsx  DeduplicationStats.tsx  DropZone.tsx  DuplicateDetectionDialog.tsx  DuplicateFileComparison.tsx  DuplicateResolutionPolicyConfig.tsx  ErrorBoundary.tsx  FileWatcherDemo.css  FileWatcherDemo.tsx  ImportWizard.tsx  index.ts
src/context/: AppStateContext.tsx  ChatContext.tsx  CollaborationContext.tsx  DocumentEditorContext.tsx  chatTypes.ts  index.ts  types.ts  useCollaboration.ts
src/hooks/: index.ts  useAISettings.ts  useAISuggestions.ts  useAITextOperations.ts  useAutoSave.ts  useChatContext.ts  useConflictResolution.ts  useDocumentEditor.ts  useDocumentState.ts  useFileWatcher.ts  useOfflineStatus.ts  useOfflineSync.ts  useProgress.ts  useResizablePanels.ts  (+3 more)
(+177 files in other folders)
