[package]
name = "proxemic"
version = "0.1.0"
description = "AI-powered content transformation system for training materials"
authors = ["Proxemic Team"]
license = "MIT"
repository = "https://github.com/your-org/proxemic"
edition = "2021"
default-run = "proxemic"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "registry"] }
dirs = "5.0"
tempfile = "3.3"
tauri-plugin-log = { version = "2.0", features = ["colored"] }
log = "0.4"
infer = "0.19.0"

# Configuration Management Dependencies (self-contained)
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
sha2 = "0.10"
hex = "0.4"

# Security & Encryption
aes-gcm = "0.10"       # AES-256-GCM encryption
aes = "0.8"            # Low-level AES backend

# Security & File Operations
mime_guess = "2.0"

# File watching and event processing
notify = "6.1"
crossbeam-channel = "0.5"
tokio-util = { version = "0.7", features = ["time"] }

# Windows API for memory monitoring
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["psapi", "processthreadsapi"] }

# Path manipulation
path-clean = "1.0"
dunce = "1.0"

# Log rotation and file logging
tracing-appender = "0.2"
once_cell = "1.19"

# Validation
regex = "1.0"
rand = { version = "0.8", features = ["std", "std_rng"] }
jsonschema = "0.17"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3.8"
serial_test = "2"
cargo-audit = "0.18"
cargo-deny = "0.17"

# Production release optimization
[profile.release]
opt-level = 3           # Maximum optimization
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization, slower compile
panic = "abort"         # Smaller binary size
# strip = true          # Disabled due to macOS linker issues with duplicate -z flags

# Development profile (keep existing)
[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
production = ["custom-protocol"]

[[test]]
name = "performance_benchmarks"
path = "tests/performance_benchmarks.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[test]]
name = "json_schema_validation"
path = "tests/json_schema_validation.rs"

[[bin]]
name = "proxemic"
path = "src/main.rs"

[[bin]]
name = "debug_hash"
path = "debug_hash.rs"

[[bin]]
name = "debug_artifact_test"
path = "debug_artifact_test.rs"
